--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feranmi Ige - Student Portfolio</title>
+    <title>Subhpreet Singh - Student Portfolio</title>
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -32,7 +32,7 @@
     <section id="hero" class="text-center text-white d-flex align-items-center">
         <div class="container">
             <h1>Welcome to My Portfolio Auto Deploy</h1>
-            <p>Hi, I’m Feranmi Ige, a passionate student exploring tech and innovation.</p>
+            <p>Hi, I’m Subhpreet Singh, a passionate student exploring tech and innovation.</p>
             <a href="#about" class="btn btn-primary">Learn More</a>
         </div>
     </section>
@@ -46,7 +46,8 @@
                     <img src="assets/profile.jpg" alt="Feranmi Ige" class="rounded-circle mb-3" width="200">
                 </div>
                 <div class="col-md-8">
-                    <p>I’m a computer science student with a love for coding, problem-solving, and building projects that make a difference. I enjoy learning new technologies and collaborating with others to turn ideas into reality.</p>
+                    <p>I’m a student passionate about coding, problem-solving, and using technology to create practical solutions. 
+            I enjoy learning new tools and collaborating with others to turn ideas into real-world projects.</p>
                 </div>
             </div>
         </div>
@@ -110,8 +111,8 @@
     <!-- Contact Footer -->
     <footer id="contact" class="bg-dark text-white text-center py-3">
         <div class="container">
-            <p>Contact me at: feranmi_ige@example.com | GitHub: github.com/Feranmi Ige</p>
-            <p>&copy; 2025 Feranmi Ige. All rights reserved.</p>
+            <p>Contact me at: subhpreetsingh657@gmail.com | GitHub: github.com/Subhpreet Singh</p>
+            <p>&copy; 2025 Subhpreet Singh. All rights reserved.</p>
         </div>
     </footer>
 
